--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .header {
-  background-image: url('cabeçalho.png'); /* Substitua pelo nome real da sua imagem */
+  background-image: url('https://joaoaugustompdj.github.io/Nutriccalculator/cabeçalho.png'); /* Substitua pelo nome real da sua imagem */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
