--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,10 @@ body {
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-image-width: 50%;
-  border-image: auto;
+img{
+  width: auto;
+  height: auto;
+}
 }
 
 .calculator h1 {
