--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,8 @@ body {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 img{
+  
+  image-orientation: from-image;
   width: auto;
   height: auto;
 }
