--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,14 @@ body {
   width: 100%; /* Ajuste conforme necessário para a altura da imagem */
 }
 img{
-  
-  image-orientation: from-image;
-  width: 100px;
-  height: auto;
+  vertical-align: top;
+  object-position: top;
+  object-fit: contain;
+  image-orientation: from-mage;
+  width: 50px;
+  height: 50px;
+  max-width: 70px;
+  max-height: 70px;
 }
 .calculator {
   text-align: center;
