--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,10 @@ body {
 }
 
 .h1{
+  background-image: auto;
   vertical-align: top;
   object-position: top;
   object-fit: contain;
-  image-orientation: from-mage;
   width: 50px;
   height: 50px;
   max-width: 70px;
