--- a/styles.css
+++ b/styles.css
@@ -8,16 +8,15 @@ body {
   background-color: #f4f4f4;
 }
 
-.h1{
-  background-image: auto;
-  vertical-align: top;
-  object-position: top;
-  object-fit: contain;
-  width: 50px;
-  height: 50px;
-  max-width: 70px;
-  max-height: 70px;
+header {
+  text-align: center;
 }
+
+header img {
+  max-width: 100%;
+  height: auto;
+}
+
 .calculator {
   text-align: center;
   max-width: 400px;
