--- a/styles.css
+++ b/styles.css
@@ -6,17 +6,17 @@ body {
 
 header {
   text-align: center;
-  margin-bottom: 20px; /* Adicionei margem inferior para separar a imagem do formulário */
+  margin-bottom: 20px;
 }
 
 header img {
-  max-width: 100%;
+  max-width: 100%; /* Garante que a imagem não ultrapasse a largura do contêiner pai */
   height: auto;
 }
 
 .calculator {
   text-align: center;
-  max-width: 400px;
+  max-width: 600px; /* Ajuste o tamanho máximo do contêiner do formulário conforme necessário */
   margin: 20px auto;
   padding: 20px;
   background-color: #fff;
@@ -39,7 +39,8 @@ label {
   font-weight: bold;
 }
 
-input, select {
+input,
+select {
   padding: 8px;
   width: 100%;
   box-sizing: border-box;
