--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ header img {
 
 .calculator {
   text-align: center;
+  width: 90%;
   max-width: 1000px; /* Ajuste o tamanho máximo do contêiner do formulário conforme necessário */
   margin: 20px auto;
   padding: 40px;
@@ -26,10 +27,11 @@ header img {
 
 .calculator h1 {
   margin: 0;
-  font-size: 40px;
+  font-size: 400px;
 }
 
 form {
+  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 10px;
